--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@
   --primary-white-color: #ffffff;
   --primary-black-color: #000000;
   --address-color: rgba(255, 255, 255, 0.6);
+  --primary-icon-color:#AFB1B8;
   --primary-bg-color: #ffffff;
   --secondary-bg-color: #2f303a;
   --third-bg-color: #f5f4fa;
@@ -159,16 +160,35 @@ img {
 .auth-nav .item:not(:last-child) {
   margin-right: 50px;
 }
+/* auth nav svg */
 .auth-nav .link {
   color: var(--primary-text-color);
+  display:flex;
+  align-items: center;
+
 }
+.item-icon{
+  margin-right: 10px;
+  fill:currentColor;
+}
+
 
 /* hero */
 .hero {
-  background-color: var(--secondary-bg-color);
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 600px;
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url(../img/bg-hero/hero.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:cover;
+
+  background-color: var(--secondary-bg-color);
 }
 .hero-title {
   margin: auto;
@@ -226,22 +246,39 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
-.advantage-list .item {
+.advantage-item {
   width: 270px;
   margin-right: var(--card-set-gap);
 }
 
-.advantage-list .item:nth-child(4n) {
+.advantage-list .advantage-item:nth-child(4n) {
   margin-right: 0px;
 }
 .advantage-list .title {
   margin-bottom: 10px;
+ 
 
   color: var(--title-text-color);
 
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
+}
+
+/* advantage svg */
+.icon{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+ height: 120px;
+ border-radius: 4px;
+
+  background-color: var(--third-bg-color);
+}
+.icon-size{
+  width: 70px;
+  height: 70px;
 }
 
 /* what we do */
@@ -299,7 +336,91 @@ img {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  margin-bottom: 16px;
+} 
+
+  /*team social svg  */
+
+  .team-list{
+    color:var(--primary-text-color)
+  }
+  .social-list{
+    display: flex;
+      align-items: center;
+        justify-content: center;
+  }
+  .social-item {
+  display:flex;
+    width:44px;
+    height: 44px;
+  align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+    border-radius: 50%;
+    
+  }
+  .social-item:last-child{
+    margin-right: 0;
+  }
+ 
+  .social-item:hover,
+  .social-item:focus{
+    background-color:var(--accent-color);
+  }
+  .social-item .link{
+    color:var(--primary-icon-color);
+  }
+  .social-icon{
+    width: 20px;
+    height: 20px;
+    fill:currentColor;
+  
+  }
+  .social-icon:hover,
+    .social-icon:focus{
+    fill:var(--primary-white-color);
+  }
+
+  /* clients section */
+  .clients-list{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  
+  }
+ 
+.clients-item{
+  display:flex;
+align-items: center;
+justify-content: center;
+  margin-right:30px;
+border: 1px solid var(--primary-icon-color);
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
+  
 }
+
+.clients-item:last-child{
+  margin-right: 0;
+}
+.client-items .link{
+  display:block;
+}
+.clients-item:hover,
+.clients-item:focus{
+  border: 1px solid var(--accent-color);
+}
+.clients-logo{
+  width:106px ;
+  height:60px ;
+  fill:var(--primary-icon-color);
+}
+.clients-logo:hover,
+.clients-logo:focus{
+  fill:var(--accent-color);
+}
+  
 /* footer */
 .footer-page {
   padding-top: 60px;
@@ -336,6 +457,56 @@ img {
 .footer-tel:focus {
   color: var(--accent-color);
 }
+/* footer join */
+.main-footer{
+  display:flex;
+  align-items:baseline;
+
+}
+.adress{
+  margin-right:70px;
+}
+.join-text{
+  text-transform: uppercase;
+  color:var(--primary-white-color);
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 20px;
+}
+ .join-list {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+
+ .join-item {
+   display: flex;
+   width: 44px;
+   height: 44px;
+   align-items: center;
+   justify-content: center;
+   margin-right: 10px;
+   border-radius: 50%;
+
+   background-color: rgba(255, 255, 255, 0.1);
+
+ }
+
+ .join-item:last-child {
+   margin-right: 0;
+ }
+
+ .join-item:hover,
+ .join-item:focus {
+   background-color: var(--accent-color)
+ }
+
+ .join-icon {
+   width: 20px;
+   height: 20px;
+   fill: var(--primary-white-color);
+
+ }
 
 /* portfolio */
 
@@ -413,4 +584,11 @@ img {
 
   font-size: 16px;
   line-height: 1.88;
+}
+.project .link{
+  display: block;
+}
+.project .link:hover,
+.project .link:focus{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
